src/test/ui/suggestions/suggest-move-types.stderr
error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:28:20
   |
LL | struct A<T, M: One<A=(), T>> {
   |                    ^^^^^^^ help: reorder the arguments: `T, A = ()`

error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:34:37
   |
LL | struct Al<'a, T, M: OneWithLifetime<A=(), T, 'a>> {
   |                                     ^^^^^^^^^^^ help: reorder the arguments: `'a, T, A = ()`

error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:40:28
   |
LL | struct B<T, U, V, M: Three<A=(), B=(), C=(), T, U, V>> {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ help: reorder the arguments: `T, U, V, A = (), B = (), C = ()`

error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:47:53
   |
LL | struct Bl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<A=(), B=(), C=(), T, U, V, 'a, 'b, 'c>> {
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: reorder the arguments: `'a, 'b, 'c, T, U, V, A = (), B = (), C = ()`

error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:55:28
   |
LL | struct C<T, U, V, M: Three<T, A=(), B=(), C=(), U, V>> {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ help: reorder the arguments: `T, U, V, A = (), B = (), C = ()`

error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:62:53
   |
LL | struct Cl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<T, 'a, A=(), B=(), C=(), U, 'b, V, 'c>> {
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: reorder the arguments: `'a, 'b, 'c, T, U, V, A = (), B = (), C = ()`

error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:70:28
   |
LL | struct D<T, U, V, M: Three<T, A=(), B=(), U, C=(), V>> {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ help: reorder the arguments: `T, U, V, A = (), B = (), C = ()`

error: incorrect parameter order
  --> $DIR/suggest-move-types.rs:77:53
   |
LL | struct Dl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<T, 'a, A=(), B=(), U, 'b, C=(), V, 'c>> {
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: reorder the arguments: `'a, 'b, 'c, T, U, V, A = (), B = (), C = ()`

error: aborting due to 8 previous errors

